--- a/style.css
+++ b/style.css
@@ -11,15 +11,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: bisque;
+  background-color: rgb(66, 66, 66);
   padding-top: 88px;
-}
-
-canvas {
-  background-color: black;
-}
-
-h1 {
-  font-size: 55px;
-  padding: 22px;
 }
