--- a/style.css
+++ b/style.css
@@ -6,11 +6,37 @@
 }
 
 
+html {
+    height: 100%;
+}
+
+
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(66, 66, 66);
-  padding-top: 88px;
+    background-image: url("img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#gameCanvas {
+    border: solid 4px rgba(0, 0, 0, 0.35);
+    border-radius: 22px;
+    box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.9);
+}
+
+
+h1 {
+    margin-top: 144px;
+    font-family: "Orbitron";
+    font-size: 44px;
+    color: rgba(255, 255, 255, 0.9);
+    text-shadow: 1px 1px 6px rgb(0, 0, 0);
+    letter-spacing: 8px;
+    padding-bottom: 6px;
 }
