--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@
   padding: 0;
 }
 
+.d-none {
+    display: none !important;
+}
 
 html {
     height: 100%;
 }
-
 
 body {
     background-image: url("img/background.jpg");
@@ -23,20 +25,338 @@ body {
     justify-content: center;
 }
 
-
 #gameCanvas {
+    background-color: rgba(0, 0, 0, 0);
     border: solid 4px rgba(0, 0, 0, 0.35);
     border-radius: 22px;
     box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.9);
+    display: block;
+}
+
+body > h1 {
+    margin-top: 144px;
+    font-family: "Orbitron";
+    font-size: 46px;
+    color: rgb(235, 235, 235);
+    text-shadow: 2px 2px 6px rgb(0, 0, 0),
+    1px 1px 14px rgb(72, 255, 0),
+    -3px -2px 2px rgb(0, 0, 0);
+    letter-spacing: 8px;
+    padding-bottom: 6px;
+}
+
+#start-overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
-h1 {
-    margin-top: 144px;
+#start-screen {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    margin-top: 220px;
+    height: 506px;
+    width: 740px;
+    border-radius: 22px;
+    box-shadow: 0px 0px 24px rgba(197, 197, 197, 0.9);
+    z-index: 1;
+}
+
+#start-btn {
+    margin-top: 180px;
+    position: absolute;
     font-family: "Orbitron";
-    font-size: 44px;
-    color: rgba(255, 255, 255, 0.9);
-    text-shadow: 1px 1px 6px rgb(0, 0, 0);
-    letter-spacing: 8px;
-    padding-bottom: 6px;
+    font-size: 38px;
+    color: black;
+    border: solid 1px rgba(56, 56, 56, 0.9);
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.8);
+    width: 200px;
+    height: 60px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 222ms;
+    cursor: pointer;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    background-color: rgba(67, 238, 52, 0.8);
+    animation: pulse 888ms infinite ease-in-out;
+    z-index: 2;
+}
+
+#start-btn:hover {
+    box-shadow: 0px 0px 34px rgba(45, 126, 42, 0.9);
+    background-color: rgb(21, 255, 0);
+    animation: wip 240ms infinite ease-in-out;
+    text-shadow: 1px 1px 3px rgb(106, 255, 143);
+}
+
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes wip {
+    0% {
+        transform: translateY(0) scale(1.15);
+    }
+    33% {
+        transform: translateY(-2px) scale(1.15);
+    }
+    66% {
+        transform: translateY(0) scale(1.15);
+    }
+    100% {
+        transform: translateY(+2px) scale(1.15);
+    }
+}
+
+
+.controls-info-btn {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    margin-top: 650px;
+    cursor: pointer;
+    transition: all ease-in-out 222ms;
+    span {
+        color: white;
+        font-family: "Orbitron";
+        font-size: 22px;
+        margin-right: 16px;
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+    }
+    img {
+        height: 40px;
+        filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.8));
+    }
+}
+
+
+.controls-info-btn:hover {
+    transform: translateY(2px) scale(1.2);
+}
+
+
+.impressum-btn {
+    position: absolute;
+    z-index: 3;
+    margin-top: 680px;
+    margin-left: 600px;
+    cursor: pointer;
+    color: white;
+    font-family: "Orbitron";
+    font-size: 17px;
+    transition: all ease-in-out 222ms;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
+    &:hover {
+        transform: translateY(1px) translateX(-6px) scale(1.2);
+    }
+}
+
+
+#impressum-container {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    margin-top: 220px;
+    height: 506px;
+    width: 740px;
+    border-radius: 22px;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: "OpenSans";
+    font-size: 20px;
+}
+
+
+#impressum-box {
+    padding: 36px 32px;
+    background-color: rgb(27, 27, 27);
+    border-radius: 22px;
+    box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.8);
+    h2 {
+        font-size: 30px;
+        text-decoration: underline;
+        margin-bottom: 6px;
+        cursor: default;
+    }
+    p {
+        margin-bottom: 4px;
+        cursor: default;
+    }
+    a {
+        color: rgb(9, 255, 0);
+        text-shadow: 2px 2px 8px rgb(255, 255, 255);
+        text-decoration: none;
+        cursor: pointer;
+    }
+    a:hover {
+        text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.7);
+        font-weight: bold;
+    }
+}
+
+
+#gitcontact {
+    margin-top: 10px;
+    height: 29px;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(90deg) brightness(100%) contrast(100%);
+    transition: all ease-in-out 222ms;
+    cursor: pointer;
+    &:hover {
+        transform: scale(1.2);
+    }
+}
+
+
+#game-controls-container {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    margin-top: 220px;
+    height: 506px;
+    width: 740px;
+    border-radius: 22px;
+    background-color: rgba(104, 85, 71, 0.9);
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: "OpenSans";
+    font-size: 23px;
+    padding-bottom: 48px;
+    border: solid 3px rgba(48, 48, 48, 0.7);
+    span {
+        margin: 6px;
+        cursor: default;
+        text-shadow: 1px 1px 3px rgb(0, 0, 0);
+    }
+    h2 {
+        font-family: "Orbitron";
+        letter-spacing: 4px;
+        text-decoration: underline;
+        cursor: default;
+        margin-bottom: 8px;
+    }
+    p {
+        cursor: default;
+        text-shadow: 1px 1px 3px rgb(0, 0, 0);
+    }
+}
+
+
+.control-info-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.keyBox {
+    cursor: default;
+    margin: 8px;
+    height: 55px;
+    width: 55px;
+    font-size: 24px;
+    padding: 6px 14px;
+    border-radius: 10px;
+    text-align: center;
+    background: linear-gradient(to bottom, #6e6e6e 0%, #1f1f1f 100%);
+    color: #ffffff;
+    border: 4px solid #444444;
+    box-shadow: 0 1px 0 #666666,         
+      0 2px 2px rgba(0,0,0,0.5), 
+      inset 0 1px 0 #2a2a2a;
+    filter: drop-shadow(0px 0px 6px rgb(255, 255, 255));
+  }
+
+
+  .keyBoxSpace {
+    cursor: default;
+    margin: 8px;
+    height: 50px;
+    width: 144px;
+    font-size: 22px;
+    padding: 4px 15px;
+    border-radius: 10px;
+    text-align: center;
+    background: linear-gradient(to bottom, #6e6e6e 0%, #1f1f1f 100%);
+    color: #ffffff;
+    border: 4px solid #444444;
+    box-shadow: 0 1px 0 #666666,         
+      0 2px 2px rgba(0,0,0,0.5), 
+      inset 0 1px 0 #2a2a2a;
+    filter: drop-shadow(0px 0px 6px rgb(255, 255, 255));
+  }
+  
+
+  #game-over-overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #game-over-screen {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    margin-top: 220px;
+    height: 506px;
+    width: 740px;
+    border-radius: 22px;
+    box-shadow: 0px 0px 24px rgba(197, 197, 197, 0.9);
+    z-index: 1;
+}
+
+#continue-btn {
+    margin-top: -196px;
+    position: absolute;
+    font-family: "Orbitron";
+    font-size: 36px;
+    color: black;
+    border: solid 1px rgba(56, 56, 56, 0.9);
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.8);
+    width: 250px;
+    height: 60px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 222ms;
+    cursor: pointer;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    background-color: rgba(67, 238, 52, 0.8);
+    animation: pulse 1222ms infinite ease-in-out;
+    z-index: 2;
+}
+
+#continue-btn:hover {
+    box-shadow: 0px 0px 34px rgba(45, 126, 42, 0.9);
+    background-color: rgb(21, 255, 0);
+    animation: wip 333ms infinite ease-in-out;
+    text-shadow: 1px 1px 3px rgb(106, 255, 143);
 }
