--- a/style.css
+++ b/style.css
@@ -66,6 +66,36 @@ body > h1 {
     z-index: 1;
 }
 
+
+.fullscreen-Icon {
+    position: absolute;
+    margin-top: -230px;
+    right: 10px;
+    height: 44px;
+    z-index: 3;
+    cursor: pointer;
+    transition: all ease-in-out 222ms;
+    filter: drop-shadow(0px 0px 4px rgb(255, 255, 255));
+    &:hover {
+        transform: translateY(3px) translateX(-2px) scale(1.25);
+    }
+}
+
+.sound-switch-icon {
+    position: absolute;
+    margin-top: 640px;
+    margin-right: 660px;
+    height: 34px;
+    z-index: 5;
+    cursor: pointer;
+    transition: all ease-in-out 222ms;
+    &:hover {
+        transform: scale(1.2);
+        filter: drop-shadow(0px 0px 8px rgb(0, 0, 0));
+    }
+}
+
+
 #start-btn {
     margin-top: 180px;
     position: absolute;
