--- a/style.css
+++ b/style.css
@@ -57,58 +57,6 @@ body {
 }
 
 
-.start-overlay {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.start-screen {
-    position: relative;
-    margin: 0;
-    padding: 0;
-    height: 480px;
-    width: 720px;
-    border-radius: 22px;
-    box-shadow: 0px 0px 24px rgba(197, 197, 197, 0.9);
-    z-index: 1;
-}
-
-
-#start-btn {
-    position: absolute;
-    margin-bottom: 70px;
-    font-family: "Orbitron";
-    font-size: 38px;
-    color: black;
-    border: solid 1px rgba(56, 56, 56, 0.9);
-    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.8);
-    width: 200px;
-    height: 60px;
-    border-radius: 22px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all ease-in-out 222ms;
-    cursor: pointer;
-    text-shadow: 2px 2px 2px rgb(255, 255, 255);
-    background-color: rgba(67, 238, 52, 0.8);
-    animation: pulse 888ms infinite ease-in-out;
-    z-index: 2;
-}
-
-
-#start-btn:hover {
-    box-shadow: 0px 0px 34px rgba(45, 126, 42, 0.9);
-    background-color: rgb(21, 255, 0);
-    animation: wip 240ms infinite ease-in-out;
-    text-shadow: 1px 1px 3px rgb(106, 255, 143);
-}
-
-
 #fullscreen-Icon {
     position: absolute;
     margin-top: -68px;
@@ -384,7 +332,7 @@ body {
 }
   
 
-.game-over-overlay {
+.game-over-overlay, .win-overlay, .start-overlay {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -393,7 +341,7 @@ body {
 }
 
 
-.game-over-screen {
+.start-screen, .game-over-screen, .win-screen {
     position: relative;
     margin: 0;
     padding: 0;
@@ -402,6 +350,29 @@ body {
     border-radius: 22px;
     box-shadow: 0px 0px 24px rgba(197, 197, 197, 0.9);
     z-index: 1;
+}
+
+
+#start-btn {
+    position: absolute;
+    margin-bottom: 70px;
+    font-family: "Orbitron";
+    font-size: 38px;
+    color: black;
+    border: solid 1px rgba(56, 56, 56, 0.9);
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.8);
+    width: 200px;
+    height: 60px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 222ms;
+    cursor: pointer;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    background-color: rgba(67, 238, 52, 0.8);
+    animation: pulse 888ms infinite ease-in-out;
+    z-index: 2;
 }
 
 
@@ -432,6 +403,37 @@ body {
     box-shadow: 0px 0px 34px rgba(45, 126, 42, 0.9);
     background-color: rgb(21, 255, 0);
     animation: wip 333ms infinite ease-in-out;
+    text-shadow: 1px 1px 3px rgb(106, 255, 143);
+}
+
+
+#play-again-btn {
+    position: absolute;
+    margin-bottom: 400px;
+    font-family: "Orbitron";
+    font-size: 38px;
+    color: black;
+    border: solid 1px rgba(56, 56, 56, 0.9);
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.8);
+    width: 280px;
+    height: 60px;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 222ms;
+    cursor: pointer;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    background-color: rgba(67, 238, 52, 0.8);
+    animation: pulse 888ms infinite ease-in-out;
+    z-index: 2;
+}
+
+
+#start-btn:hover, #play-again-btn:hover {
+    box-shadow: 0px 0px 34px rgba(45, 126, 42, 0.9);
+    background-color: rgb(21, 255, 0);
+    animation: wip 240ms infinite ease-in-out;
     text-shadow: 1px 1px 3px rgb(106, 255, 143);
 }
 
