--- a/responsiv.css
+++ b/responsiv.css
@@ -56,6 +56,7 @@
     .mobile-control-container {
         visibility: visible;
         margin: 0;
+        margin-bottom: -10px;
         display: flex;
         align-items: flex-end;
         justify-content: space-between;
@@ -75,61 +76,18 @@
         justify-content: flex-end;
     }
 
+    #controls-info-btn {
+        display: none;
+    } 
+
     #impressum-btn {
-        margin-right: 4px;
-        margin-bottom: 1px;
+        margin-right: 10px;
+        margin-bottom: 2px;
         font-size: 14px;
         &:hover {
             transform: none;
             text-decoration: none;
         }
-    }
-
-    #controls-info-btn {
-        margin-right: 200px;
-        font-size: 10px;
-        span {
-            margin-right: 5px;
-            font-size: 14px;
-        }
-        img {
-            height: 22px;
-            filter: drop-shadow(0px 0px 4px rgb(0, 0, 0));
-        }
-    } 
-
-    #controls-info-btn:hover {
-        transform: none;
-        span {
-            text-decoration: none;
-        }
-    }
-
-    #game-controls-container {
-        font-size: 18px;
-        span {
-            margin: 0;
-        }
-        .extra {
-            margin-left: 24px;
-        }
-        h2 {
-            margin-top: 14px;
-            font-size: 20px;
-            letter-spacing: 3px;
-            margin-bottom: 2px;
-        }
-    }
-
-    .keyBox, .keyBoxSpace {
-        font-size: 18px;
-        padding: 5px 12px;
-        height: 45px;
-        width: 45px;
-    }
-
-    .keyBoxSpace {
-        width: 130px;
     }
 
     #impressum-box {
@@ -138,6 +96,14 @@
             font-size: 24px;
         }
     }
+}
 
-
+@media (max-width: 480px) {
+    #mobile-move-control {
+        margin-left: 70px;
+    }
+    
+    #mobile-action-control {
+        margin-right: 94px;
+    }
 }
