--- a/style.css
+++ b/style.css
@@ -190,7 +190,11 @@ body {
 
 
 #impressum-box {
-    padding: 36px 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 56px;
     background-color: rgb(27, 27, 27);
     border-radius: 22px;
     box-shadow: 0px 0px 16px rgba(255, 255, 255, 0.8);
@@ -212,6 +216,13 @@ body {
     }
     a:hover {
         text-shadow: 0 0 18px rgb(255, 255, 255);
+    }
+    div {
+        margin-bottom: 18px;
+    }
+    span {
+        margin-right: 8px;
+        cursor: default;
     }
 }
 
